change how localuser is handled in services