@@ -1,5 +1,6 @@
 package com.chat.client.network;
 
+import com.chat.client.domain.Credentials;
 import com.chat.client.domain.User;
 import com.chat.client.domain.application.UsersService;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -11,13 +12,19 @@ import java.net.http.HttpResponse;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 public class UsersServiceImpl implements UsersService {
+    private final Credentials credentials;
+
+    public UsersServiceImpl(Credentials credentials) {
+        this.credentials = credentials;
+    }
+
     private final HttpClient httpClient = HttpClient.newBuilder().build();
     private final HttpRequestFactory httpRequestFactory = new HttpRequestFactory();
 
-    @Override
-    public CompletableFuture<List<User>> getUsersAsync() {
+    private CompletableFuture<List<User>> getAllUsersAsync() {
         var request = httpRequestFactory.createGETRequest("/list-users");
 
         return httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString()).thenApply(
@@ -32,11 +39,20 @@ public class UsersServiceImpl implements UsersService {
 
                     try {
                         var usernames = new ObjectMapper().readValue(response.body(), String[].class);
-                        return Arrays.stream(usernames).map(User::new).toList();
+                        return Arrays.stream(usernames).map(User::new).collect(Collectors.toList());
                     } catch (JsonProcessingException e) {
                         throw new JsonException(e);
                     }
                 }
         );
+    }
+
+
+    @Override
+    public CompletableFuture<List<User>> getUsersAsync() {
+        return getAllUsersAsync().thenApply(users -> {
+            users.remove(new User(credentials.username()));
+            return users;
+        });
     }
 }
